<resources>
    <string name="app_name">Ginga Soccer</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">E-mail</string>
    <string name="logo">Logo</string>
    <string name="password">Password</string>
    <string name="password_recovery">Passsword Recovery</string>
    <string name="send">Send</string>
    <string name="full_name">Full Name</string>
    <string name="nickname">Nickname</string>
    <string name="birth_date">Birth Date</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="user">User</string>
    <string name="user_key">User Key</string>
    <string name="team">Team</string>
    <string name="user_info">User Info</string>
    <string name="create_team">Create Team</string>
    <string name="team_name">Team Name</string>
    <string name="address">Address</string>
    <string name="create">Create</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="team_info">Team Info</string>
    <string name="active">Active</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="begin_match">Begin Match</string>
    <string name="search_player_hint">Type the e-mail</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="team_key">Team Key</string>
    <string name="no_player_found">No Player Found</string>
    <string name="draw_players">Draw Players</string>
    <string name="draw">Draw</string>
    <string name="attend">Attend</string>
    <string name="players">Players</string>
    <string name="players_by_team">Players by Team</string>
    <string name="formed_teams">Formed Teams</string>
    <string name="number_of_players">Number of Players</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="ginga_soccer_preferences">Ginga Soccer Preferences</string>
    <string name="logout">Logout</string>
</resources>
