<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context=".PlayersDrawActivity">

    <TextView
        android:id="@+id/draw_players_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_side_margin"
        android:layout_marginLeft="@dimen/main_side_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/main_side_margin"
        android:layout_marginRight="@dimen/main_side_margin"
        android:gravity="center_horizontal"
        android:text="@string/draw_players"
        android:textAppearance="@style/Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_of_players_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/main_side_margin"
        android:layout_marginLeft="@dimen/main_side_margin"
        android:layout_marginTop="16dp"
        android:text="@string/players_by_team"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/draw_players_tv" />

    <Spinner
        android:id="@+id/number_of_players_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/spinner_style"
        android:layout_marginStart="@dimen/main_side_margin"
        android:layout_marginLeft="@dimen/main_side_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/main_side_margin"
        android:layout_marginRight="@dimen/main_side_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_of_players_tv"
        app:layout_constraintTop_toBottomOf="@+id/draw_players_tv" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/players_for_draw_rv"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/main_side_margin"
        android:layout_marginLeft="@dimen/main_side_margin"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="@dimen/main_side_margin"
        android:layout_marginRight="@dimen/main_side_margin"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/draw_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_players_tv" />

    <Button
        android:id="@+id/draw_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/draw"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/players_for_draw_rv" />

</android.support.constraint.ConstraintLayout>