<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context=".ForgotPasswordActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forgot_password_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_side_margin"
            android:layout_marginLeft="@dimen/main_side_margin"
            android:layout_marginTop="@dimen/title_top_margin"
            android:layout_marginEnd="@dimen/main_side_margin"
            android:layout_marginRight="@dimen/main_side_margin"
            android:gravity="center_horizontal"
            android:text="@string/password_recovery"
            android:textAppearance="@style/Title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--<EditText-->
            <!--android:id="@+id/recovery_email_edt"-->
            <!--android:layout_width="0dp"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="@dimen/main_side_margin"-->
            <!--android:layout_marginLeft="@dimen/main_side_margin"-->
            <!--android:layout_marginTop="64dp"-->
            <!--android:layout_marginEnd="@dimen/main_side_margin"-->
            <!--android:layout_marginRight="@dimen/main_side_margin"-->
            <!--android:ems="10"-->
            <!--android:hint="@string/email"-->
            <!--android:inputType="textEmailAddress"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/forgot_password_title_tv" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/recovery_email_til"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/main_side_margin"
            android:layout_marginLeft="@dimen/main_side_margin"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="@dimen/main_side_margin"
            android:layout_marginRight="@dimen/main_side_margin"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_password_title_tv">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/recovery_email_edt"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:singleLine="true"
                tools:layout_editor_absoluteY="8dp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/recovery_send_btn"
            style="@style/ButtonShape"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/send"
            android:textColor="@android:color/background_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recovery_email_til" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>